// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slice test on ios Related articles renders a single child element 1`] = `
<View
  style={Object {}}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Test text
  </Text>
</View>
`;

exports[`Slice test on ios Related articles renders multiple child elements 1`] = `
<View
  style={Object {}}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Test text 1
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Test text 2
  </Text>
</View>
`;
